# 3Dbird

./: .gitignore  CMakeLists.txt  README.md  documentation  imgui.ini
src/: bird.cpp  bird.hpp  controller.cpp  controller.hpp  hitbox.cpp  hitbox.hpp  main.cpp  ring.cpp  ring.hpp  shadow_map.cpp  shadow_map.hpp  terrain.cpp  terrain.hpp  tree.cpp  tree.hpp  variable.cpp  variable.hpp  view.cpp  view.hpp
